app/src/main/antlr/.antlr/TeqlParser.java
// Generated from /home/dominick/OneDrive/Linux/teql-java-gradle/app/src/main/antlr/TeqlParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class TeqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_AFTER=1, KW_AND=2, KW_ANY=3, KW_AT=4, KW_BEFORE=5, KW_BEGIN=6, KW_BETWEEN=7, 
		KW_CHANGE=8, KW_COMMIT=9, KW_DELETE=10, KW_END=11, KW_EVERYTHING=12, KW_FILE=13, 
		KW_FIND=14, KW_FIRST=15, KW_FROM=16, KW_IN=17, KW_INDENT=18, KW_INSERT=19, 
		KW_LAST=20, KW_LENGTH=21, KW_LINE=22, KW_NEXT=23, KW_OF=24, KW_OFFSET=25, 
		KW_OR=26, KW_REPEAT=27, KW_REPLACE=28, KW_SEEK=29, KW_SET=30, KW_SHOW=31, 
		KW_START=32, KW_SUBSTRING=33, KW_TO=34, KW_USE=35, KW_WITH=36, INT=37, 
		COMMENT=38, STR_OPEN=39, PATH=40, REGEX_OPEN=41, VAR=42, NAME=43, HYPHEN=44, 
		COLON=45, COMMA=46, DOT=47, L_PAREN=48, R_PAREN=49, SEMICOLON=50, SPACES=51, 
		STR_ESCAPE=52, STR_HEX_BYTE_2=53, STR_HEX_BYTE_1=54, STR_UNICODE_4=55, 
		STR_UNICODE_FLEX=56, STR_CLOSE=57, STR_INTERPOLATE_OPEN=58, STR_BODY=59, 
		SPACES_2=60, STR_INTERPOLATE_CLOSE=61, REGEX_ESCAPE=62, REGEX_HEX_BYTE_2=63, 
		REGEX_HEX_BYTE_1=64, REGEX_UNICODE_4=65, REGEX_UNICODE_FLEX=66, REGEX_INV_CHAR_CLASS_OPEN=67, 
		REGEX_CHAR_CLASS_OPEN=68, REGEX_NONCAP_GROUP_OPEN=69, REGEX_NAMED_CAP_GROUP_OPEN=70, 
		REGEX_CAP_GROUP_OPEN=71, REGEX_GROUP_CLOSE=72, REGEX_DOT=73, REGEX_REPEAT_STAR=74, 
		REGEX_REPEAT_PLUS=75, REGEX_OPTION=76, REGEX_REPEAT_FIXED=77, REGEX_REPEAT_MIN=78, 
		REGEX_REPEAT_MAX=79, REGEX_REPEAT_RANGE=80, REGEX_ANCHOR_START=81, REGEX_ANCHOR_END=82, 
		REGEX_OR=83, REGEX_CLOSE=84, REGEX_LITERAL=85, REGEX_CHAR_CLASS_RANGE=86, 
		REGEX_CHAR_CLASS_CLOSE=87;
	public static final int
		RULE_selector = 0, RULE_parantheticalSelector = 1, RULE_startSelector = 2, 
		RULE_endSelector = 3, RULE_seekSelector = 4, RULE_offsetSelector = 5, 
		RULE_findSelector = 6, RULE_lineSelector = 7, RULE_beforeSelector = 8, 
		RULE_afterSelector = 9, RULE_betweenSelector = 10, RULE_blockSelector = 11, 
		RULE_qualifiedSelector = 12, RULE_nestedSelector = 13, RULE_stringLiteral = 14, 
		RULE_stringLiteralInterpolation = 15, RULE_regexLiteral = 16, RULE_regexLiteralQualifier = 17, 
		RULE_regexLiteralQualifiedUnit = 18, RULE_regexLiteralUnit = 19, RULE_regexLiteralLiteral = 20, 
		RULE_regexLiteralCharRange = 21, RULE_regexLiteralCharClass = 22, RULE_regexLiteral_group = 23, 
		RULE_rangeLiteral = 24, RULE_rangeLiteralUnit = 25, RULE_rangeLiteralRelrange = 26, 
		RULE_rangeLiteralRange = 27, RULE_rangeLiteralLiteral = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"selector", "parantheticalSelector", "startSelector", "endSelector", 
			"seekSelector", "offsetSelector", "findSelector", "lineSelector", "beforeSelector", 
			"afterSelector", "betweenSelector", "blockSelector", "qualifiedSelector", 
			"nestedSelector", "stringLiteral", "stringLiteralInterpolation", "regexLiteral", 
			"regexLiteralQualifier", "regexLiteralQualifiedUnit", "regexLiteralUnit", 
			"regexLiteralLiteral", "regexLiteralCharRange", "regexLiteralCharClass", 
			"regexLiteral_group", "rangeLiteral", "rangeLiteralUnit", "rangeLiteralRelrange", 
			"rangeLiteralRange", "rangeLiteralLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "'/'", null, null, null, "':'", "','", 
			null, null, null, "';'", null, null, null, null, null, null, null, "'{'", 
			null, null, "'}'", null, null, null, null, null, "'[^'", "'['", "'(?:'", 
			null, null, null, null, null, null, null, null, null, null, null, "'^'", 
			"'$'", "'|'", null, null, null, "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KW_AFTER", "KW_AND", "KW_ANY", "KW_AT", "KW_BEFORE", "KW_BEGIN", 
			"KW_BETWEEN", "KW_CHANGE", "KW_COMMIT", "KW_DELETE", "KW_END", "KW_EVERYTHING", 
			"KW_FILE", "KW_FIND", "KW_FIRST", "KW_FROM", "KW_IN", "KW_INDENT", "KW_INSERT", 
			"KW_LAST", "KW_LENGTH", "KW_LINE", "KW_NEXT", "KW_OF", "KW_OFFSET", "KW_OR", 
			"KW_REPEAT", "KW_REPLACE", "KW_SEEK", "KW_SET", "KW_SHOW", "KW_START", 
			"KW_SUBSTRING", "KW_TO", "KW_USE", "KW_WITH", "INT", "COMMENT", "STR_OPEN", 
			"PATH", "REGEX_OPEN", "VAR", "NAME", "HYPHEN", "COLON", "COMMA", "DOT", 
			"L_PAREN", "R_PAREN", "SEMICOLON", "SPACES", "STR_ESCAPE", "STR_HEX_BYTE_2", 
			"STR_HEX_BYTE_1", "STR_UNICODE_4", "STR_UNICODE_FLEX", "STR_CLOSE", "STR_INTERPOLATE_OPEN", 
			"STR_BODY", "SPACES_2", "STR_INTERPOLATE_CLOSE", "REGEX_ESCAPE", "REGEX_HEX_BYTE_2", 
			"REGEX_HEX_BYTE_1", "REGEX_UNICODE_4", "REGEX_UNICODE_FLEX", "REGEX_INV_CHAR_CLASS_OPEN", 
			"REGEX_CHAR_CLASS_OPEN", "REGEX_NONCAP_GROUP_OPEN", "REGEX_NAMED_CAP_GROUP_OPEN", 
			"REGEX_CAP_GROUP_OPEN", "REGEX_GROUP_CLOSE", "REGEX_DOT", "REGEX_REPEAT_STAR", 
			"REGEX_REPEAT_PLUS", "REGEX_OPTION", "REGEX_REPEAT_FIXED", "REGEX_REPEAT_MIN", 
			"REGEX_REPEAT_MAX", "REGEX_REPEAT_RANGE", "REGEX_ANCHOR_START", "REGEX_ANCHOR_END", 
			"REGEX_OR", "REGEX_CLOSE", "REGEX_LITERAL", "REGEX_CHAR_CLASS_RANGE", 
			"REGEX_CHAR_CLASS_CLOSE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TeqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TeqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectorContext extends ParserRuleContext {
		public ParantheticalSelectorContext parantheticalSelector() {
			return getRuleContext(ParantheticalSelectorContext.class,0);
		}
		public StartSelectorContext startSelector() {
			return getRuleContext(StartSelectorContext.class,0);
		}
		public EndSelectorContext endSelector() {
			return getRuleContext(EndSelectorContext.class,0);
		}
		public SeekSelectorContext seekSelector() {
			return getRuleContext(SeekSelectorContext.class,0);
		}
		public OffsetSelectorContext offsetSelector() {
			return getRuleContext(OffsetSelectorContext.class,0);
		}
		public FindSelectorContext findSelector() {
			return getRuleContext(FindSelectorContext.class,0);
		}
		public LineSelectorContext lineSelector() {
			return getRuleContext(LineSelectorContext.class,0);
		}
		public BeforeSelectorContext beforeSelector() {
			return getRuleContext(BeforeSelectorContext.class,0);
		}
		public AfterSelectorContext afterSelector() {
			return getRuleContext(AfterSelectorContext.class,0);
		}
		public BetweenSelectorContext betweenSelector() {
			return getRuleContext(BetweenSelectorContext.class,0);
		}
		public BlockSelectorContext blockSelector() {
			return getRuleContext(BlockSelectorContext.class,0);
		}
		public QualifiedSelectorContext qualifiedSelector() {
			return getRuleContext(QualifiedSelectorContext.class,0);
		}
		public NestedSelectorContext nestedSelector() {
			return getRuleContext(NestedSelectorContext.class,0);
		}
		public SelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selector; }
	}

	public final SelectorContext selector() throws RecognitionException {
		SelectorContext _localctx = new SelectorContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_selector);
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				parantheticalSelector();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				startSelector();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(60);
				endSelector();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(61);
				seekSelector();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(62);
				offsetSelector();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(63);
				findSelector();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(64);
				lineSelector();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(65);
				beforeSelector();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(66);
				afterSelector();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(67);
				betweenSelector();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(68);
				blockSelector();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(69);
				qualifiedSelector();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(70);
				nestedSelector();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParantheticalSelectorContext extends ParserRuleContext {
		public TerminalNode L_PAREN() { return getToken(TeqlParser.L_PAREN, 0); }
		public SelectorContext selector() {
			return getRuleContext(SelectorContext.class,0);
		}
		public TerminalNode R_PAREN() { return getToken(TeqlParser.R_PAREN, 0); }
		public ParantheticalSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parantheticalSelector; }
	}

	public final ParantheticalSelectorContext parantheticalSelector() throws RecognitionException {
		ParantheticalSelectorContext _localctx = new ParantheticalSelectorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_parantheticalSelector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(L_PAREN);
			setState(74);
			selector();
			setState(75);
			match(R_PAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartSelectorContext extends ParserRuleContext {
		public TerminalNode KW_START() { return getToken(TeqlParser.KW_START, 0); }
		public StartSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startSelector; }
	}

	public final StartSelectorContext startSelector() throws RecognitionException {
		StartSelectorContext _localctx = new StartSelectorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_startSelector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(KW_START);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EndSelectorContext extends ParserRuleContext {
		public TerminalNode KW_END() { return getToken(TeqlParser.KW_END, 0); }
		public EndSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endSelector; }
	}

	public final EndSelectorContext endSelector() throws RecognitionException {
		EndSelectorContext _localctx = new EndSelectorContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_endSelector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(KW_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeekSelectorContext extends ParserRuleContext {
		public TerminalNode KW_SEEK() { return getToken(TeqlParser.KW_SEEK, 0); }
		public TerminalNode INT() { return getToken(TeqlParser.INT, 0); }
		public SeekSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seekSelector; }
	}

	public final SeekSelectorContext seekSelector() throws RecognitionException {
		SeekSelectorContext _localctx = new SeekSelectorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_seekSelector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(KW_SEEK);
			setState(82);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OffsetSelectorContext extends ParserRuleContext {
		public TerminalNode KW_OFFSET() { return getToken(TeqlParser.KW_OFFSET, 0); }
		public TerminalNode INT() { return getToken(TeqlParser.INT, 0); }
		public OffsetSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_offsetSelector; }
	}

	public final OffsetSelectorContext offsetSelector() throws RecognitionException {
		OffsetSelectorContext _localctx = new OffsetSelectorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_offsetSelector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(KW_OFFSET);
			setState(85);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FindSelectorContext extends ParserRuleContext {
		public TerminalNode KW_FIND() { return getToken(TeqlParser.KW_FIND, 0); }
		public RegexLiteralContext regexLiteral() {
			return getRuleContext(RegexLiteralContext.class,0);
		}
		public StringLiteralContext stringLiteral() {
			return getRuleContext(StringLiteralContext.class,0);
		}
		public FindSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_findSelector; }
	}

	public final FindSelectorContext findSelector() throws RecognitionException {
		FindSelectorContext _localctx = new FindSelectorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_findSelector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(KW_FIND);
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REGEX_OPEN:
				{
				setState(88);
				regexLiteral();
				}
				break;
			case STR_OPEN:
				{
				setState(89);
				stringLiteral();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineSelectorContext extends ParserRuleContext {
		public TerminalNode KW_LINE() { return getToken(TeqlParser.KW_LINE, 0); }
		public RangeLiteralContext rangeLiteral() {
			return getRuleContext(RangeLiteralContext.class,0);
		}
		public LineSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineSelector; }
	}

	public final LineSelectorContext lineSelector() throws RecognitionException {
		LineSelectorContext _localctx = new LineSelectorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_lineSelector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(KW_LINE);
			setState(93);
			rangeLiteral();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BeforeSelectorContext extends ParserRuleContext {
		public TerminalNode KW_BEFORE() { return getToken(TeqlParser.KW_BEFORE, 0); }
		public List<SelectorContext> selector() {
			return getRuleContexts(SelectorContext.class);
		}
		public SelectorContext selector(int i) {
			return getRuleContext(SelectorContext.class,i);
		}
		public TerminalNode KW_ANY() { return getToken(TeqlParser.KW_ANY, 0); }
		public TerminalNode INT() { return getToken(TeqlParser.INT, 0); }
		public TerminalNode KW_EVERYTHING() { return getToken(TeqlParser.KW_EVERYTHING, 0); }
		public BeforeSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beforeSelector; }
	}

	public final BeforeSelectorContext beforeSelector() throws RecognitionException {
		BeforeSelectorContext _localctx = new BeforeSelectorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_beforeSelector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_ANY:
				{
				setState(95);
				match(KW_ANY);
				setState(96);
				selector();
				}
				break;
			case INT:
				{
				setState(97);
				match(INT);
				}
				break;
			case KW_EVERYTHING:
				{
				setState(98);
				match(KW_EVERYTHING);
				}
				break;
			case KW_BEFORE:
				break;
			default:
				break;
			}
			setState(101);
			match(KW_BEFORE);
			setState(102);
			selector();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AfterSelectorContext extends ParserRuleContext {
		public TerminalNode KW_AFTER() { return getToken(TeqlParser.KW_AFTER, 0); }
		public List<SelectorContext> selector() {
			return getRuleContexts(SelectorContext.class);
		}
		public SelectorContext selector(int i) {
			return getRuleContext(SelectorContext.class,i);
		}
		public TerminalNode KW_ANY() { return getToken(TeqlParser.KW_ANY, 0); }
		public TerminalNode INT() { return getToken(TeqlParser.INT, 0); }
		public TerminalNode KW_EVERYTHING() { return getToken(TeqlParser.KW_EVERYTHING, 0); }
		public AfterSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_afterSelector; }
	}

	public final AfterSelectorContext afterSelector() throws RecognitionException {
		AfterSelectorContext _localctx = new AfterSelectorContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_afterSelector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_ANY:
				{
				setState(104);
				match(KW_ANY);
				setState(105);
				selector();
				}
				break;
			case INT:
				{
				setState(106);
				match(INT);
				}
				break;
			case KW_EVERYTHING:
				{
				setState(107);
				match(KW_EVERYTHING);
				}
				break;
			case KW_AFTER:
				break;
			default:
				break;
			}
			setState(110);
			match(KW_AFTER);
			setState(111);
			selector();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BetweenSelectorContext extends ParserRuleContext {
		public TerminalNode KW_ANY() { return getToken(TeqlParser.KW_ANY, 0); }
		public List<SelectorContext> selector() {
			return getRuleContexts(SelectorContext.class);
		}
		public SelectorContext selector(int i) {
			return getRuleContext(SelectorContext.class,i);
		}
		public TerminalNode KW_BETWEEN() { return getToken(TeqlParser.KW_BETWEEN, 0); }
		public TerminalNode KW_AND() { return getToken(TeqlParser.KW_AND, 0); }
		public BetweenSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_betweenSelector; }
	}

	public final BetweenSelectorContext betweenSelector() throws RecognitionException {
		BetweenSelectorContext _localctx = new BetweenSelectorContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_betweenSelector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(KW_ANY);
			setState(114);
			selector();
			setState(115);
			match(KW_BETWEEN);
			setState(116);
			selector();
			setState(117);
			match(KW_AND);
			setState(118);
			selector();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockSelectorContext extends ParserRuleContext {
		public TerminalNode KW_FROM() { return getToken(TeqlParser.KW_FROM, 0); }
		public List<SelectorContext> selector() {
			return getRuleContexts(SelectorContext.class);
		}
		public SelectorContext selector(int i) {
			return getRuleContext(SelectorContext.class,i);
		}
		public TerminalNode KW_TO() { return getToken(TeqlParser.KW_TO, 0); }
		public TerminalNode KW_LENGTH() { return getToken(TeqlParser.KW_LENGTH, 0); }
		public TerminalNode INT() { return getToken(TeqlParser.INT, 0); }
		public BlockSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockSelector; }
	}

	public final BlockSelectorContext blockSelector() throws RecognitionException {
		BlockSelectorContext _localctx = new BlockSelectorContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_blockSelector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(KW_FROM);
			setState(121);
			selector();
			setState(122);
			match(KW_TO);
			setState(126);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KW_AFTER:
			case KW_ANY:
			case KW_BEFORE:
			case KW_END:
			case KW_EVERYTHING:
			case KW_FIND:
			case KW_FIRST:
			case KW_FROM:
			case KW_LAST:
			case KW_LINE:
			case KW_NEXT:
			case KW_OFFSET:
			case KW_SEEK:
			case KW_START:
			case INT:
			case L_PAREN:
				{
				setState(123);
				selector();
				}
				break;
			case KW_LENGTH:
				{
				setState(124);
				match(KW_LENGTH);
				setState(125);
				match(INT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QualifiedSelectorContext extends ParserRuleContext {
		public RangeLiteralContext rangeLiteral() {
			return getRuleContext(RangeLiteralContext.class,0);
		}
		public TerminalNode KW_OF() { return getToken(TeqlParser.KW_OF, 0); }
		public SelectorContext selector() {
			return getRuleContext(SelectorContext.class,0);
		}
		public QualifiedSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedSelector; }
	}

	public final QualifiedSelectorContext qualifiedSelector() throws RecognitionException {
		QualifiedSelectorContext _localctx = new QualifiedSelectorContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_qualifiedSelector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			rangeLiteral();
			setState(129);
			match(KW_OF);
			setState(130);
			selector();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NestedSelectorContext extends ParserRuleContext {
		public TerminalNode KW_ANY() { return getToken(TeqlParser.KW_ANY, 0); }
		public List<SelectorContext> selector() {
			return getRuleContexts(SelectorContext.class);
		}
		public SelectorContext selector(int i) {
			return getRuleContext(SelectorContext.class,i);
		}
		public TerminalNode KW_IN() { return getToken(TeqlParser.KW_IN, 0); }
		public NestedSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nestedSelector; }
	}
